; ModuleID = '/home/carl/AnghaBench/lz4/programs/extr_lz4io.c_LZ4IO_decompressFilename.c'
source_filename = "/home/carl/AnghaBench/lz4/programs/extr_lz4io.c_LZ4IO_decompressFilename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CLOCKS_PER_SEC = common dso_local global double 0.000000e+00, align 8
@.str = private unnamed_addr constant [20 x i8] c"Done in %.2f sec  \0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LZ4IO_decompressFilename(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca double, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @LZ4IO_createDResources(i32* %12)
  store i32 %13, i32* %7, align 4
  %14 = call i64 (...) @clock()
  store i64 %14, i64* %8, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load i8*, i8** %5, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @LZ4IO_decompressDstFile(i32* %15, i32 %16, i8* %17, i8* %18)
  store i32 %19, i32* %9, align 4
  %20 = call i64 (...) @clock()
  store i64 %20, i64* %10, align 8
  %21 = load i64, i64* %10, align 8
  %22 = load i64, i64* %8, align 8
  %23 = sub nsw i64 %21, %22
  %24 = sitofp i64 %23 to double
  %25 = load double, double* @CLOCKS_PER_SEC, align 8
  %26 = fdiv double %24, %25
  store double %26, double* %11, align 8
  %27 = load double, double* %11, align 8
  %28 = call i32 @DISPLAYLEVEL(i32 4, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), double %27)
  %29 = load i32, i32* %7, align 4
  %30 = call i32 @LZ4IO_freeDResources(i32 %29)
  %31 = load i32, i32* %9, align 4
  ret i32 %31
}

declare dso_local i32 @LZ4IO_createDResources(i32*) #1

declare dso_local i64 @clock(...) #1

declare dso_local i32 @LZ4IO_decompressDstFile(i32*, i32, i8*, i8*) #1

declare dso_local i32 @DISPLAYLEVEL(i32, i8*, double) #1

declare dso_local i32 @LZ4IO_freeDResources(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
